# quickcommand

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-qc.yml
Scripts/: package-release.sh
docs/superpowers/plans/: 2026-04-04-progress-message-diversity.md
docs/superpowers/specs/: 2026-04-04-progress-message-diversity-design.md
plan/: v1.md
src/: app.rs  backend.rs  cli.rs  config.rs  error.rs  exec.rs  lib.rs  main.rs  model.rs  prompt.rs  safety.rs  shell_integration.rs
