[package]
name = "quickcommand"
version = "0.1.2"
edition = "2024"

[lib]
name = "quickcommand"
path = "src/lib.rs"

[[bin]]
name = "qc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.19.1"
